// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlueBaseApp should render BlueBaseApp 1`] = `
<BlueBaseApp>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        <Text>
          Loading
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render BlueBaseApp 2`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <ThemedComponent
        navigator={
          Object {
            "initialRouteName": "Root",
            "routes": Array [
              Object {
                "name": "Root",
                "navigationOptions": Object {
                  "header": null,
                },
                "navigator": Object {
                  "initialRouteName": "Home",
                  "routes": Array [
                    Object {
                      "exact": true,
                      "name": "Home",
                      "navigationOptions": Object {
                        "headerLeft": null,
                        "title": "BlueBase",
                      },
                      "path": "",
                      "screen": "HomeScreen",
                    },
                  ],
                  "type": "stack",
                },
                "path": "",
              },
            ],
            "type": "stack",
          }
        }
      >
        <Navigation
          navigator={
            Object {
              "initialRouteName": "Root",
              "routes": Array [
                Object {
                  "name": "Root",
                  "navigationOptions": Object {
                    "header": null,
                  },
                  "navigator": Object {
                    "initialRouteName": "Home",
                    "routes": Array [
                      Object {
                        "exact": true,
                        "name": "Home",
                        "navigationOptions": Object {
                          "headerLeft": null,
                          "title": "BlueBase",
                        },
                        "path": "",
                        "screen": "HomeScreen",
                      },
                    ],
                    "type": "stack",
                  },
                  "path": "",
                },
              ],
              "type": "stack",
            }
          }
        >
          <Navigation
            navigator={
              Object {
                "initialRouteName": "Home",
                "routes": Array [
                  Object {
                    "exact": true,
                    "name": "Home",
                    "navigationOptions": Object {
                      "headerLeft": null,
                      "title": "BlueBase",
                    },
                    "path": "",
                    "screen": "HomeScreen",
                  },
                ],
                "type": "stack",
              }
            }
          >
            <ThemedComponent
              key="Home"
            >
              <HomeScreen>
                <ComponentState
                  description="Welcome to BlueBase Framework!"
                  imageSource="test-file-stub"
                  styles={
                    Object {
                      "image": Object {
                        "height": 100,
                        "width": 100,
                      },
                    }
                  }
                  title="BlueBase"
                >
                  <ThemedComponent
                    description="Welcome to BlueBase Framework!"
                    imageSource="test-file-stub"
                    styles={
                      Object {
                        "image": Object {
                          "height": 100,
                          "width": 100,
                        },
                      }
                    }
                    title="BlueBase"
                  >
                    <ThemedComponent
                      description="Welcome to BlueBase Framework!"
                      imageSource="test-file-stub"
                      styles={
                        Object {
                          "image": Object {
                            "height": 100,
                            "width": 100,
                          },
                        }
                      }
                      title="BlueBase"
                    >
                      <ComponentState
                        description="Welcome to BlueBase Framework!"
                        imageSource="test-file-stub"
                        styles={
                          Object {
                            "actionRoot": Object {
                              "marginTop": 8,
                            },
                            "description": Object {
                              "marginBottom": 8,
                              "textAlign": "center",
                            },
                            "image": Object {
                              "height": 100,
                              "width": 100,
                            },
                            "imageRoot": Object {
                              "marginBottom": 16,
                            },
                            "root": Object {
                              "alignItems": "center",
                              "flex": 1,
                              "justifyContent": "center",
                            },
                            "title": Object {
                              "marginBottom": 8,
                              "textAlign": "center",
                            },
                          }
                        }
                        title="BlueBase"
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flex": 1,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <ThemedComponent
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <ThemedComponent
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "flex": 1,
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "flex": 1,
                                      "justifyContent": "center",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "marginBottom": 16,
                                        }
                                      }
                                    >
                                      <ThemedComponent
                                        style={
                                          Object {
                                            "marginBottom": 16,
                                          }
                                        }
                                      >
                                        <ThemedComponent
                                          style={
                                            Object {
                                              "marginBottom": 16,
                                            }
                                          }
                                        >
                                          <ThemedComponent
                                            style={
                                              Object {
                                                "marginBottom": 16,
                                              }
                                            }
                                          >
                                            <ThemedComponent
                                              style={
                                                Object {
                                                  "marginBottom": 16,
                                                }
                                              }
                                            >
                                              <View
                                                style={
                                                  Object {
                                                    "marginBottom": 16,
                                                  }
                                                }
                                              >
                                                <View
                                                  style={
                                                    Object {
                                                      "marginBottom": 16,
                                                    }
                                                  }
                                                >
                                                  <Image
                                                    source="test-file-stub"
                                                    style={
                                                      Object {
                                                        "height": 100,
                                                        "width": 100,
                                                      }
                                                    }
                                                  >
                                                    <ThemedComponent
                                                      source="test-file-stub"
                                                      style={
                                                        Object {
                                                          "height": 100,
                                                          "width": 100,
                                                        }
                                                      }
                                                    >
                                                      <Component
                                                        source="test-file-stub"
                                                        style={
                                                          Object {
                                                            "height": 100,
                                                            "width": 100,
                                                          }
                                                        }
                                                      >
                                                        <Image
                                                          source="test-file-stub"
                                                          style={
                                                            Object {
                                                              "height": 100,
                                                              "width": 100,
                                                            }
                                                          }
                                                        />
                                                      </Component>
                                                    </ThemedComponent>
                                                  </Image>
                                                </View>
                                              </View>
                                            </ThemedComponent>
                                          </ThemedComponent>
                                        </ThemedComponent>
                                      </ThemedComponent>
                                    </View>
                                    <H6
                                      style={
                                        Object {
                                          "marginBottom": 8,
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ThemedComponent
                                        style={
                                          Object {
                                            "marginBottom": 8,
                                            "textAlign": "center",
                                          }
                                        }
                                      >
                                        <Component
                                          style={
                                            Object {
                                              "marginBottom": 8,
                                              "textAlign": "center",
                                            }
                                          }
                                          styles={
                                            Object {
                                              "root": Object {
                                                "color": "rgba(0, 0, 0, 0.87)",
                                                "fontFamily": undefined,
                                                "fontSize": 20,
                                                "fontWeight": "500",
                                              },
                                            }
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "rgba(0, 0, 0, 0.87)",
                                                  "fontFamily": undefined,
                                                  "fontSize": 20,
                                                  "fontWeight": "500",
                                                },
                                                Object {
                                                  "marginBottom": 8,
                                                  "textAlign": "center",
                                                },
                                              ]
                                            }
                                          >
                                            <Text
                                              style={
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": undefined,
                                                    "fontSize": 20,
                                                    "fontWeight": "500",
                                                  },
                                                  Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  },
                                                ]
                                              }
                                            >
                                              BlueBase
                                            </Text>
                                          </Text>
                                        </Component>
                                      </ThemedComponent>
                                    </H6>
                                    <Body2
                                      style={
                                        Object {
                                          "marginBottom": 8,
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ThemedComponent
                                        style={
                                          Object {
                                            "marginBottom": 8,
                                            "textAlign": "center",
                                          }
                                        }
                                      >
                                        <Component
                                          style={
                                            Object {
                                              "marginBottom": 8,
                                              "textAlign": "center",
                                            }
                                          }
                                          styles={
                                            Object {
                                              "root": Object {
                                                "color": "rgba(0, 0, 0, 0.87)",
                                                "fontFamily": undefined,
                                                "fontSize": 14,
                                                "fontWeight": "400",
                                              },
                                            }
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "rgba(0, 0, 0, 0.87)",
                                                  "fontFamily": undefined,
                                                  "fontSize": 14,
                                                  "fontWeight": "400",
                                                },
                                                Object {
                                                  "marginBottom": 8,
                                                  "textAlign": "center",
                                                },
                                              ]
                                            }
                                          >
                                            <Text
                                              style={
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": undefined,
                                                    "fontSize": 14,
                                                    "fontWeight": "400",
                                                  },
                                                  Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  },
                                                ]
                                              }
                                            >
                                              Welcome to BlueBase Framework!
                                            </Text>
                                          </Text>
                                        </Component>
                                      </ThemedComponent>
                                    </Body2>
                                  </View>
                                </View>
                              </ThemedComponent>
                            </ThemedComponent>
                          </ThemedComponent>
                        </View>
                      </ComponentState>
                    </ThemedComponent>
                  </ThemedComponent>
                </ComponentState>
              </HomeScreen>
            </ThemedComponent>
          </Navigation>
        </Navigation>
      </ThemedComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render BlueBaseApp with custom child 1`] = `
<BlueBaseApp>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        <Text>
          Loading
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render BlueBaseApp with custom child 2`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <Text>
        <Text>
          🚀 BlueBase System Content!
        </Text>
      </Text>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render default app when boot doesn't return anything 1`] = `null`;

exports[`BlueBaseApp should render error state when a child throws an error 1`] = `
<BlueBaseApp>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        <Text>
          Loading
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state when a child throws an error 2`] = `
<BlueBaseApp>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          🚨 BlueBase Error
        </Text>
      </Text>
      <Text>
        <Text>
          💥 Boom!
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state when boot throws an error 1`] = `
<BlueBaseApp
  BB={
    BlueBase {
      "Analytics": Analytics {
        "BB": [Circular],
      },
      "Components": ComponentRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Configs": ConfigRegistry {
        "BB": [Circular],
        "data": Map {
          "development" => Object {
            "key": "development",
            "value": true,
          },
        },
        "subscriptions": Map {},
      },
      "Hooks": FilterRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Logger": Logger {
        "BB": [Circular],
      },
      "Plugins": PluginRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Themes": ThemeRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "boot": [Function],
      "bootOptions": Object {
        "components": Object {},
        "configs": Object {},
        "hooks": Object {},
        "plugins": Array [],
        "themes": Array [],
      },
      "booted": false,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          🚨 BlueBase Error
        </Text>
      </Text>
      <Text>
        <Text>
          Boot Error!
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state with actual error message when development config is undefined, && isProduction is false 1`] = `
<BlueBaseApp
  BB={
    BlueBase {
      "Analytics": Analytics {
        "BB": [Circular],
      },
      "Components": ComponentRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Configs": ConfigRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Hooks": FilterRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Logger": Logger {
        "BB": [Circular],
      },
      "Plugins": PluginRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Themes": ThemeRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "boot": [Function],
      "bootOptions": Object {
        "components": Object {},
        "configs": Object {},
        "hooks": Object {},
        "plugins": Array [],
        "themes": Array [],
      },
      "booted": false,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          🚨 BlueBase Error
        </Text>
      </Text>
      <Text>
        <Text>
          Boot Error!
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state with custom error message when development config is undefined, && isProduction is true 1`] = `
<BlueBaseApp
  BB={
    BlueBase {
      "Analytics": Analytics {
        "BB": [Circular],
      },
      "Components": ComponentRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Configs": ConfigRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Hooks": FilterRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Logger": Logger {
        "BB": [Circular],
      },
      "Plugins": PluginRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "Themes": ThemeRegistry {
        "BB": [Circular],
        "data": Map {},
        "subscriptions": Map {},
      },
      "boot": [Function],
      "bootOptions": Object {
        "components": Object {},
        "configs": Object {},
        "hooks": Object {},
        "plugins": Array [],
        "themes": Array [],
      },
      "booted": false,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          🚨 BlueBase Error
        </Text>
      </Text>
      <Text>
        <Text>
          An unknown error occured.
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state with custom message when a child throws a null error 1`] = `
<BlueBaseApp>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        <Text>
          Loading
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state with custom message when a child throws a null error 2`] = `
<BlueBaseApp>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          🚨 BlueBase Error
        </Text>
      </Text>
      <Text>
        <Text>
          An unknown error occured.
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state with custom message when in production mode 1`] = `
<BlueBaseApp
  configs={
    Object {
      "development": false,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        <Text>
          Loading
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;

exports[`BlueBaseApp should render error state with custom message when in production mode 2`] = `
<BlueBaseApp
  configs={
    Object {
      "development": false,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          🚨 BlueBase Error
        </Text>
      </Text>
      <Text>
        <Text>
          An unknown error occured.
        </Text>
      </Text>
    </View>
  </View>
</BlueBaseApp>
`;
